[package]
name = "integration-tests"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
subxt = "0.33.0"
subxt-signer = { version = "0.33.0", features = ["subxt"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk" }
zombienet-support = { git = "https://github.com/paritytech/zombienet-sdk" }