[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
horde = { path = "../../horde" }
rand = "0.8"
subxt = "0.33"
subxt-signer = { version = "0.33", features = ["subxt"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
